--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -81,7 +81,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"Hello world\")"
+   ]
   }
  ],
  "metadata": {
