update index notebook to pass continous integration test

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -82,13 +82,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Hello world\")"
+    "print(\"Hello world!\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
